		 TConcrete type instead of TService and TImplementation.
		-[Core] Registered collections can now be injected and resolved as IReadOnlyCollection<T> and
		 IReadOnlyList<T> (.NET 4.5 only). (work item 19992).
		-[Diagnostics] Created a public API for querying the container for diagnostic results (work item 20062)

	Changes:
		-[Core] Diagnostics moved into a separate project.


Version 2.3.1 (v2.3.1 RTM)  2013-07-12

	General description:
		This patch release fixes a few bugs in the WCF Integration packages and one bug in the LifetimeScoping
		package.

	Bug fixes:
		-[Integration.Wcf] Lifetime scope was not disposed when object graph construction failed. (work item 19948)
		-[Integration.Wcf] WCF Integration broke WS-Discovery. (work item 19960)
		-[Integration.Wcf] Instances where cached per service type instead of per registration. (work item 19947)
		-[Extensions.LifetimeScoping] Instances where cached per service type instead of per registration. 
		 (work item 19947)	 


Version 2.3.0 (v2.3 RTM)  2013-06-30

	General description:
		This minor release focusses on advanced and integration scenarios in the core library. Besides these 
		features, this release contains several bug fixes.

	New features:
		-[Core] RegisterManyForOpenGeneric overloads that take in an BatchRegistrationCallback and a list of
		 types now accept open generic types. Closed generic versions of the supplied open generic types will
		 be added to the list of implementations that is supplied to the BatchRegistrationCallback.
		 (work item 19745)
		-[Core] RegisterAllOpenGeneric method (and overloads). They do to collections what RegisterOpenGeneric
		 does to normal registrations. RegisterAllOpenGeneric allows registering a list of open generic types
		 which will be tranformed to a list of matching closed generic types when a collection is requested.
		 (work item 19758)
		-[Core] New RegisterAll(Type, IEnumerable<Registration>) overload added to make registering collections